# mspkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  scripts.sh  setup.cfg  setup.py  test_installation.py
.github/: REPOSITORY_SETUP.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  advanced_mission_planning.py  basic_telemetry.py  complete_demo.py  comprehensive_demo.py  configuration_backup.py  flight_control.py  mission_planning.py  real_time_visualization.py  sensor_calibration.py
mspkit/: __init__.py  cli.py  config.py  control.py  core.py  mission.py  mission_simulator.py  msp_constants.py  performance.py  sensors.py  telemetry.py
tests/: README.md  conftest.py  test_core.py
