[metadata]
name = mspkit
author = Shafiq Sadat
author_email = 
description = SDK for iNav and Betaflight using MSP v1/v2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ShafiqSadat/mspkit
project_urls =
    Bug Reports = https://github.com/ShafiqSadat/mspkit/issues
    Source = https://github.com/ShafiqSadat/mspkit
    Documentation = https://github.com/ShafiqSadat/mspkit/wiki
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: System :: Hardware :: Hardware Drivers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Environment :: Console

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pyserial>=3.4

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=21.0
    isort>=5.0
    flake8>=3.8
    mypy>=0.812
examples =
    matplotlib>=3.0
    numpy>=1.19

[options.entry_points]
console_scripts =
    mspkit = mspkit.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[isort]
profile = black
multi_line_output = 3
line_length = 88

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
